e2e/tests/all/snapshots/theme_switcher_themes_rest_mobile.snap
---
source: e2e/src/suite.rs
description: theme_switcher_themes at mobile (rest)
expression: tree
---
group "Theme"
  button "Switch to the dark theme"
  button "Choose a theme" [expanded=false] [haspopup=menu]
