e2e/tests/all/snapshots/theme_toggle_themes_rest_desktop.snap
---
source: e2e/src/suite.rs
description: theme_toggle_themes at desktop (rest)
expression: tree
---
group "Theme"
  button "Switch to the dark theme"
  button "Choose a theme" [expanded=false] [haspopup=menu]
